--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 @plugin "tailwindcss-animate";
 @import "tw-animate-css";
+@plugin "@tailwindcss/typography";
 
 @custom-variant dark (&:is(.dark *));
 
